--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,16 +5,15 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingBottom="@dimen/activity_vertical_margin"
-	android:paddingLeft="@dimen/activity_horizontal_margin"
-	android:paddingRight="@dimen/activity_horizontal_margin"
-	android:paddingTop="@dimen/activity_vertical_margin"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="com.avengers.publicim.MainActivity"
+	tools:context=".activity.MainActivity"
 	tools:showIn="@layout/activity_main">
 
-	<TextView
+	<android.support.v7.widget.RecyclerView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"/>
+		android:id="@+id/view"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
