--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -15,20 +15,14 @@
 		android:background="?attr/colorPrimary"
 		app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-	<ListView
-		android:id="@+id/listView"
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_below="@+id/toolbar"
 		android:layout_above="@+id/sender"
-		android:background="@color/white_gray"
-		android:divider="@null"
-		android:dividerHeight="0dp"
-		android:listSelector="@android:color/transparent"
-		android:transcriptMode="alwaysScroll"
-		tools:listitem="@layout/view_msg_item_left"
-		android:focusable="true"
-		/>
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 
 	<include
 		android:id="@+id/sender"
