--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -8,28 +8,36 @@
 	android:fitsSystemWindows="true"
 	tools:context=".activity.MainActivity">
 
-	<android.support.design.widget.AppBarLayout
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:theme="@style/AppTheme.AppBarOverlay">
+		android:layout_height="?attr/actionBarSize"
+		android:background="?attr/colorPrimary"
+		app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-		<android.support.v7.widget.Toolbar
-			android:id="@+id/toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			android:background="?attr/colorPrimary"
-			app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-	</android.support.design.widget.AppBarLayout>
-
-	<include layout="@layout/content_main"/>
+	<android.support.v7.widget.RecyclerView
+		android:id="@+id/recyclerView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_below="@+id/toolbar"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fab"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|end"
 		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_dialog_email"/>
+		android:src="@android:drawable/ic_input_add"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true"/>
 
-</android.support.design.widget.CoordinatorLayout>
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_input_get"
+		android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
