--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -9,18 +9,11 @@
 	tools:context=".activity.ChatActivity"
 	tools:showIn="@layout/activity_chat">
 
-	<ListView
-		android:id="@+id/listView"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:background="@color/white_gray"
-		android:divider="@null"
-		android:dividerHeight="0dp"
-		android:listSelector="@android:color/transparent"
-		android:transcriptMode="alwaysScroll"
-		tools:listitem="@layout/view_msg_item_left"
-		android:focusable="true"
-		>
-	</ListView>
+	<android.support.v7.widget.RecyclerView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/recyclerView"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
