--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,14 +5,13 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	app:layout_behavior="@string/appbar_scrolling_view_behavior"
 	tools:context=".activity.MainActivity"
 	tools:showIn="@layout/activity_main">
 
 	<android.support.v7.widget.RecyclerView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:id="@+id/view"
+		android:id="@+id/recyclerView"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"/>
 
