--- a/app/src/main/res/layout/view_msg_item_right.xml
+++ b/app/src/main/res/layout/view_msg_item_right.xml
@@ -18,7 +18,8 @@
 		android:layout_height="wrap_content"
 		android:text="ac02"
 		android:id="@+id/account"
-		android:textColor="@android:color/black"/>
+		android:textColor="@android:color/black"
+		android:visibility="gone"/>
 
 	<LinearLayout
 		android:orientation="horizontal"
