--- a/app/src/main/res/layout/view_roster_item.xml
+++ b/app/src/main/res/layout/view_roster_item.xml
@@ -6,6 +6,10 @@
 	android:layout_height="wrap_content"
 	android:layout_alignParentLeft="true"
 	android:gravity="left"
+	android:clickable="true"
+	android:focusable="true"
+	android:foreground="?android:attr/selectableItemBackground"
+	android:background="?android:selectableItemBackground"
 	android:paddingBottom="6.0dip"
 	android:paddingLeft="10.0dip"
 	android:paddingRight="10.0dip"
