--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,15 @@
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+	<style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
+		<item name="tabIndicatorColor">@android:color/white</item>
+		<item name="tabIndicatorHeight">2dp</item>
+		<!--<item name="tabBackground">@color/colorPrimary</item>-->
+		<item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
+	</style>
+
+	<style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+		<item name="textAllCaps">false</item>
+	</style>
+
 </resources>
