--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
 		android:orderInCategory="200"
 		android:title="@string/action_invite_friend"
 		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_create_group"
+		android:orderInCategory="200"
+		android:title="@string/action_create_group"
+		app:showAsAction="never"/>
 </menu>
