1.gradle升至2.1.2 2.support library升至24.0.0 3.新增Contact功能，修改聯絡人UI 4.新增group邀請及退出功能(未完成) 5.修改其他細節功能

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,7 +22,9 @@
 		android:layout_below="@+id/toolbar"
 		android:layout_above="@+id/sender"
 		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"/>
+		android:layout_alignParentStart="true"
+		tools:listitem="@layout/view_msg_item_left"
+		/>
 
 	<include
 		android:id="@+id/sender"
