--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -10,10 +10,12 @@
 	tools:showIn="@layout/activity_chat">
 
 	<android.support.v7.widget.RecyclerView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		android:id="@+id/recyclerView"
 		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"/>
+		android:layout_alignParentStart="true"
+		tools:listitem="@layout/view_msg_item_left"
+		/>
 
 </RelativeLayout>
