--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,11 +8,11 @@
 	tools:context=".activity.MainActivity"
 	tools:showIn="@layout/activity_main">
 
-	<android.support.v7.widget.RecyclerView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:id="@+id/recyclerView"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"/>
+	<android.support.v4.view.ViewPager
+		android:id="@+id/viewPager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@android:color/white"
+		android:layout_below="@+id/appbar"/>
 
 </RelativeLayout>
