--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -2,12 +2,20 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".fragment.ChatListFragment">
+             tools:context="com.avengers.publicim.fragment.RosterFragment">
 
 	<!-- TODO: Update blank fragment layout -->
-	<TextView
+
+	<android.support.v7.widget.RecyclerView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:text="@string/hello_blank_fragment"/>
+		android:id="@+id/recyclerView"
+		android:layout_gravity="center"
+		tools:listitem="@layout/view_roster_item"/>
 
+	<android.support.design.widget.FloatingActionButton
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/fab"
+		android:layout_gravity="right|bottom"/>
 </FrameLayout>
