--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,5 +27,8 @@
 	<style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
 		<item name="textAllCaps">false</item>
 	</style>
+	<style name="AppTheme.NoActionBar.AppBarOverlay"
+	       parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+	<style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
 </resources>
