--- a/app/src/main/res/layout/view_roster_item.xml
+++ b/app/src/main/res/layout/view_roster_item.xml
@@ -63,6 +63,16 @@
 				android:focusable="false"
 				android:focusableInTouchMode="false"
 				android:visibility="gone"/>
+			<ImageView
+				android:id="@+id/status"
+				android:layout_width="12dp"
+				android:layout_height="12dp"
+				android:layout_alignParentRight="true"
+				android:layout_centerInParent="true"
+				android:layout_alignParentBottom="true"
+				android:scaleType="fitXY"
+				android:src="@drawable/status"
+				android:visibility="gone"/>
 		</RelativeLayout>
 	</LinearLayout>
 
