1.新增View Member的功能 2.簡易測式了第三方FAB的UI(尚未啟用)

--- a/app/src/main/res/layout/content_invite.xml
+++ b/app/src/main/res/layout/content_invite.xml
@@ -5,10 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_invite"
     tools:context="com.avengers.publicim.activity.InviteActivity">
@@ -17,9 +13,19 @@
 		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_below="@+id/toolbar"
-		android:layout_above="@+id/sender"
+		android:layout_above="@+id/inviter"
 		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"/>
+		android:layout_alignParentStart="true"
+		tools:listitem="@layout/view_roster_item"
+		/>
+
+	<include
+		android:id="@+id/inviter"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		layout="@layout/view_butten_invite"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
