--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -3,9 +3,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".activity.MainActivity">
 	<item
-		android:id="@+id/action_settings"
+		android:id="@+id/action_view_member"
 		android:orderInCategory="100"
-		android:title="@string/action_settings"
+		android:title="@string/action_view_member"
 		app:showAsAction="never"/>
 	<item
 		android:id="@+id/action_invite_group"
