--- a/app/src/main/res/layout/fragment_roster.xml
+++ b/app/src/main/res/layout/fragment_roster.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.avengers.publicim.fragment.RosterFragment">
@@ -18,4 +19,36 @@
 		android:layout_height="wrap_content"
 		android:id="@+id/fab"
 		android:layout_gravity="right|bottom"/>
+
+	<!--<com.github.clans.fab.FloatingActionMenu-->
+		<!--android:id="@+id/menu_contact"-->
+		<!--android:layout_width="match_parent"-->
+		<!--android:layout_height="match_parent"-->
+		<!--android:layout_alignParentBottom="true"-->
+		<!--android:layout_alignParentRight="true"-->
+		<!--android:paddingRight="10dp"-->
+		<!--android:paddingBottom="10dp"-->
+		<!--android:paddingLeft="10dp"-->
+		<!--app:menu_labels_ellipsize="end"-->
+		<!--app:menu_labels_singleLine="true"-->
+		<!--app:menu_backgroundColor="#ccffffff"-->
+		<!--app:menu_fab_label="Menu label">-->
+
+		<!--<com.github.clans.fab.FloatingActionButton-->
+			<!--android:id="@+id/fab_add_group"-->
+			<!--android:layout_width="wrap_content"-->
+			<!--android:layout_height="wrap_content"-->
+			<!--android:src="@drawable/ic_group_add_white_24dp"-->
+			<!--app:fab_size="mini"-->
+			<!--app:fab_label="Add Group" />-->
+
+		<!--<com.github.clans.fab.FloatingActionButton-->
+			<!--android:id="@+id/fab_add_person"-->
+			<!--android:layout_width="wrap_content"-->
+			<!--android:layout_height="wrap_content"-->
+			<!--android:src="@drawable/ic_person_add_white_24dp"-->
+			<!--app:fab_size="mini"-->
+			<!--app:fab_label="Add Person" />-->
+
+	<!--</com.github.clans.fab.FloatingActionMenu>-->
 </FrameLayout>
