--- a/app/src/main/res/layout/view_msg_item_right.xml
+++ b/app/src/main/res/layout/view_msg_item_right.xml
@@ -27,15 +27,31 @@
 		android:layout_height="match_parent"
 		android:gravity="right">
 
-		<TextView
-			android:id="@+id/datetime"
+		<LinearLayout
+			android:orientation="vertical"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_centerHorizontal="true"
-			android:layout_gravity="bottom"
-			android:text="2015-10-10\n12:34"
-			android:gravity="center_horizontal"
-			android:textSize="12sp"/>
+			android:layout_gravity="bottom">
+			<TextView
+				android:id="@+id/read"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerHorizontal="true"
+				android:layout_gravity="bottom|right"
+				android:text="已讀"
+				android:gravity="center_horizontal"
+				android:textSize="12sp"/>
+
+			<TextView
+				android:id="@+id/datetime"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerHorizontal="true"
+				android:layout_gravity="bottom|right"
+				android:text="12:34"
+				android:gravity="center_horizontal"
+				android:textSize="12sp"/>
+		</LinearLayout>
 
 		<RelativeLayout
 			android:id="@+id/relativeLayout1"
