1.新增createGroupActivity & UI 2.修正date msg bug

--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -8,7 +8,7 @@
 		android:title="@string/action_view_member"
 		app:showAsAction="never"/>
 	<item
-		android:id="@+id/action_invite_group"
+		android:id="@+id/action_invite_member"
 		android:orderInCategory="200"
 		android:title="@string/action_invite_group"
 		app:showAsAction="never"/>
