--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context="com.avengers.publicim.activity.ViewMemberActivity">
+	tools:context="com.avengers.publicim.activity.CreateGroupActivity">
 
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
@@ -22,6 +22,14 @@
 
 	</android.support.design.widget.AppBarLayout>
 
-	<include layout="@layout/content_member"/>
+	<include layout="@layout/content_create_group"/>
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:layout_margin="@dimen/fab_margin"
+		app:srcCompat="@drawable/fab_add"/>
 
 </android.support.design.widget.CoordinatorLayout>
