--- a/app/src/main/res/layout/content_invite_group.xml
+++ b/app/src/main/res/layout/content_invite_group.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_invite_group"
-    tools:context=".activity.InviteGroupActivity">
+    tools:context=".activity.InviteMemberActivity">
 
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/recyclerView"
