--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -19,6 +19,7 @@
 		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:scrollbars="vertical"
 		android:layout_below="@+id/toolbar"
 		android:layout_above="@+id/sender"
 		android:layout_alignParentLeft="true"
