--- a/app/src/main/res/layout/content_create_group.xml
+++ b/app/src/main/res/layout/content_create_group.xml
@@ -23,10 +23,32 @@
 		android:id="@+id/recyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_below="@id/groupItem"
+		android:layout_below="@+id/member"
+		android:layout_above="@+id/button"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		tools:listitem="@layout/view_roster_item"
+		/>
+
+	<Button
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/action_create_group"
+		android:id="@+id/button"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentEnd="true"
+		/>
+
+	<TextView
+		android:id="@+id/member"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/action_view_member"
+		android:layout_below="@+id/groupItem"
+		android:layout_alignParentLeft="true"
+		android:layout_alignParentStart="true"
+		android:padding="8dp"
 		/>
 
 </RelativeLayout>
