--- a/app/src/main/res/layout/view_roster_item.xml
+++ b/app/src/main/res/layout/view_roster_item.xml
@@ -43,14 +43,16 @@
 			>
 			<TextView
 				android:id="@+id/id"
-				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="id"
 				android:textColor="@android:color/black"
 				android:textSize="16sp"
 				android:layout_alignParentLeft="true"
 				android:layout_centerInParent="true"
-				android:layout_alignParentBottom="true"/>
+				android:layout_alignParentBottom="true"
+				android:maxLines="1"
+				android:ellipsize="end"
+				android:layout_width="200dp"/>
 
 			<CheckBox
 				android:layout_width="wrap_content"
