--- a/app/src/main/res/layout/view_roster_item_add.xml
+++ b/app/src/main/res/layout/view_roster_item_add.xml
@@ -43,12 +43,14 @@
 			>
 			<TextView
 				android:id="@+id/id"
-				android:layout_width="wrap_content"
+				android:layout_width="200dp"
 				android:layout_height="wrap_content"
 				android:text="id"
 				android:textColor="@android:color/black"
 				android:textSize="16sp"
 				android:layout_marginTop="5dp"
+				android:maxLines="1"
+				android:ellipsize="end"
 				android:layout_alignParentLeft="true"
 				android:layout_alignParentTop="true"/>
 			<TextView
