1.修改Manager不依附在IMApplication上(改為自行getInstance) 2.新增登入登出功能 3.修正週日期非同年顯示錯誤

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,9 @@
 		android:orderInCategory="300"
 		android:title="@string/action_create_group"
 		app:showAsAction="never"/>
+	<item
+		android:id="@+id/action_logout"
+		android:orderInCategory="400"
+		android:title="@string/action_logout"
+		app:showAsAction="never"/>
 </menu>
