--- a/app/src/main/res/layout/view_msg_item_left.xml
+++ b/app/src/main/res/layout/view_msg_item_left.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:layout_alignParentLeft="true"
@@ -13,15 +14,18 @@
 	android:orientation="horizontal"
 	>
 
-	<ImageView
+	<cn.carbs.android.avatarimageview.library.AvatarImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
 		android:clickable="true"
 		android:focusable="true"
 		android:scaleType="fitXY"
-		android:src="@mipmap/ic_profile"
-		android:layout_gravity="top"/>
+		android:layout_gravity="top"
+		tools:src="@mipmap/ic_profile"
+		app:aiv_BoarderWidth="2dp"
+		app:aiv_ShowBoarder="false"
+		app:aiv_TextSizeRatio="0.6"/>
 
 	<RelativeLayout
 		android:layout_width="match_parent"
