--- a/app/src/main/res/layout/view_roster_item_grid.xml
+++ b/app/src/main/res/layout/view_roster_item_grid.xml
@@ -6,12 +6,16 @@
                 android:layout_width="75dp"
                 android:layout_margin="6dp"
                 android:layout_height="70dp">
-	<ImageView
+	<cn.carbs.android.avatarimageview.library.AvatarImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:scaleType="fitXY"
 		android:layout_centerHorizontal="true"
-		app:srcCompat="@mipmap/ic_profile"/>
+		tools:src="@mipmap/ic_profile"
+		app:aiv_BoarderWidth="2dp"
+		app:aiv_ShowBoarder="false"
+		app:aiv_TextSizeRatio="0.6"/>
 
 	<ImageView
 		android:id="@+id/remove"
