--- a/app/src/main/res/layout/view_roster_item.xml
+++ b/app/src/main/res/layout/view_roster_item.xml
@@ -19,15 +19,17 @@
 	android:minHeight="60dp"
 	android:paddingTop="6dip"
 	>
-	<ImageView
+	<cn.carbs.android.avatarimageview.library.AvatarImageView
 		android:id="@+id/icon"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="top"
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:layout_gravity="center_vertical"
 		android:scaleType="fitXY"
 		android:layout_marginTop="0dp"
-		android:src="@mipmap/ic_profile"
-		/>
+		tools:src="@mipmap/ic_profile"
+		app:aiv_BoarderWidth="2dp"
+		app:aiv_ShowBoarder="false"
+		app:aiv_TextSizeRatio="0.6"/>
 	<LinearLayout
 		android:id="@+id/linear_layout1"
 		android:layout_width="match_parent"
